2007-09-07  Edward Hervey  <bilboed@bilboed.com>

	* configure.ac:
	On the road to 0.11 we are...

2007-08-31  Edward Hervey  <bilboed@bilboed.com>

	* AUTHORS:
	* pitivi/ui/mainwindow.py:
	Add Luca to the Authors list.

2007-08-31  Edward Hervey  <bilboed@bilboed.com>

	Patch by: Luca Della Santina <dellasantina@farm.unipi.it>
	* pitivi/Makefile.am:
	* pitivi/pitivi.py:
	* pitivi/plugincore.py:
	* pitivi/pluginmanager.py:
	* pitivi/settings.py:
	* pitivi/ui/Makefile.am:
	* pitivi/ui/actions.xml:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/pluginmanagerdialog.glade:
	* pitivi/ui/pluginmanagerdialog.py:
	Plugin system (core + ui) !
	Tests will be commited soon, along with example plugin.

2007-08-25  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/timeline/composition.py:
	Compositions don't require factories.
	Fixup Serializable-related methods, even though they don't do much yet.
	The TimelineComposition is going to require a refactoring before I go
	any further.
	* pitivi/timeline/objects.py:
	Use weakref proxy objects for storing objects requiring objects that
	aren't created yet. This allows objects to be properly free'd once
	nobody use them.
	Add TimelineObject.__requires_factory__ to specify if the class needs
	an object factory in order to create its gnlobject.
	Fix up Serializable methods to take into account the fact that some
	classes don't use object factories.
	* pitivi/timeline/source.py:
	Add __requires_factory__ to needed classes.
	Fix up wrong use of __data_type__.
	Added documentation of Serializable properties.
	Delay media-duration/start handling until we have a gnlobject.
	Fix Serializable methods.
	* tests/common.py:
	Fix TestTimelineFileSource for new behaviour.
	* tests/runtests.py:
	white line fixes...
	* tests/test_timeline_composition.py:
	Also check for proper composition 'start-duration-changed' signal
	emission.
	Add extremely basic serialization test.
	* tests/test_timeline_objects.py: